--- a/portfolio.html
+++ b/portfolio.html
@@ -10,32 +10,18 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" style=color:lightblue href="#">Ava Lorusso</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" style=color:lightblue href="index.html">About Me <span
-                            class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" style=color:lightblue href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" style=color:lightblue href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item dropdown"></li>
+    </head>
+    
+    <body>
+        <!-- Bootstrap Navbar -->
+        <nav class="navbar">
+            <ul class="navbar-brand" href="#">Ava Lorusso</a>
+                <a style=color:#c4dfeb; href="index.html">About</a>
+                <a style=color:#c4dfeb; href="portfolio.html" >Portfolio</a>
+                <a style=color:#c4dfeb; href="contact.html">Contact</a>
             </ul>
-        </div>
-    </nav>
-</head>
+         </nav>
 
-<body>
     <h1>Portfolio</h1>
     <div class="container">
         <div class="row">
