--- a/contact.html
+++ b/contact.html
@@ -3,25 +3,54 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap mobile responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Document</title>
-  <!-- css -->
-  <link rel="stylesheet" href="style.css">
-  <!-- Bootstrap -->
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Bootstrap depend. jQuery JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <!-- Bootstrap Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <!-- Bootstrap JS minified -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <!-- my CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<header>
   <!-- Bootstrap Navbar -->
-  <nav class="navbar">
-    <ul class="navbar-brand" href="#">Ava Lorusso</a>
-      <a style=color:#c4dfeb; href="index.html">About</a>
-      <a style=color:#c4dfeb; href="portfolio.html">Portfolio</a>
-      <a style=color:#c4dfeb; href="contact.html">Contact</a>
-    </ul>
+  <nav class="navbar navbar-expand-lg navbar-light text-dark">
+    <a class="navbar-brand" href="#">Ava Lorusso</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+        <!-- <li class="nav-item dropdown"></li> -->
+      </ul>
+    </div>
   </nav>
+</header>
 
+<body>
   <!--Bootstrap CONTACT -->
   <section class="mb-4 container">
 
@@ -96,7 +125,6 @@
         </ul>
       </div>
     </div>
-
   </section>
 </body>
 
