--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,6 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
-        <!-- <li class="nav-item dropdown"></li> -->
       </ul>
     </div>
   </nav>
@@ -59,7 +58,7 @@
 
     <!--Message from me-->
     <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact me
-      directly!</p>
+      directly at ava.tlorusso@gmail.com</p>
 
     <div class="row justify-content-md-center">
 
