--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
-                <!-- <li class="nav-item dropdown"></li> -->
             </ul>
         </div>
     </nav>
@@ -52,7 +51,7 @@
 
 <body>
     <h1 style="text-align: center;">Portfolio</h1>
-    <div class="container">
+    <div class="containerImages">
         <div class="row">
             <div class="col">Santi
                 <img src="Santi.JPG" class="responsive" width="420" height="600">
