updated readme w images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body>
     <!-- Bootstrap Grid -->
-    <img src="https://i.pinimg.com/280x280_RS/6e/f5/cc/6ef5cc62e22627f14d7e6761c49d53cb.jpg"
+    <img id="mainImg" src="./Assets/Images/Ava Professional.png"
         class="rounded mx-auto d-block my-5" class="img-fluid img-thumbnail figure-img rounded">
     <section class="container">
         <div class="row">
@@ -72,8 +72,9 @@
     </section>
 
     <footer>
-
+        <p style="text-align: center">Ava Lorusso ©</p>
     </footer>
+    
 </body>
 
 </html>
