--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 
       <!--Grid column-->
       <div class="col-md-6 rounded d-block">
-        <form id="contact-form">
+        <form action="action_page.php">
 
           <div class="row">
 
@@ -98,10 +98,9 @@
 
             </div>
           </div>
-
-          <!--Send-->
         </form>
-
+        
+        <!--Send-->
         <div class="text-center text-md-left">
           <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
         </div>
@@ -126,5 +125,9 @@
     </div>
   </section>
 </body>
+
+<footer>
+  <p style="text-align: center; margin-top: 275px;">Ava Lorusso ©</p>
+</footer>
 
 </html>
