--- a/portfolio.html
+++ b/portfolio.html
@@ -50,10 +50,10 @@
 </header>
 
 <body>
-    <h1 style="text-align: center;">Portfolio</h1>
+    <h1 id="padding" style="text-align: center;">Portfolio</h1>
     <div class="containerImages">
         <div class="row">
-            <div class="col">Santi
+            <div id="imgL" class="col">Santi
                 <img src="Santi.JPG" class="responsive" width="420" height="600">
             </div>
 
@@ -63,7 +63,7 @@
 
             <div class="w-100"></div>
 
-            <div class="col">Brando
+            <div id="imgL" class="col">Brando
                 <img src="Brando.JPG" class="responsive" width="420" height="275">
             </div>
 
@@ -73,5 +73,9 @@
         </div>
     </div>
 </body>
+
+<footer>
+    <p style="text-align: center">Ava Lorusso ©</p>
+</footer>
 
 </html>
