initial portfolio update to github, added profile card

--- a/contact.html
+++ b/contact.html
@@ -35,13 +35,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="index.html">About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
@@ -80,7 +80,7 @@
             <div class="rounded mx-auto d-block col-md-6">
               <div class="md-form mb-0">
                 <input type="text" id="email" name="email" class="form-control">
-                <label for="email" class="">Your email</label>
+                <label for="email">Your email</label>
               </div>
             </div>
 
@@ -102,10 +102,11 @@
         
         <!--Send-->
         <div class="text-center text-md-left">
-          <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+          <a class="btn btn-secondary">Send</a>
         </div>
         <div class="status"></div>
       </div>
+
       <!--Grid column-->
       <div class="col-md-3 text-center">
         <ul class="list-unstyled mb-0">
@@ -123,11 +124,11 @@
         </ul>
       </div>
     </div>
+    <footer>
+      <p>Ava Lorusso ©</p>
+    </footer>
   </section>
 </body>
 
-<footer>
-  <p style="text-align: center; margin-top: 275px;">Ava Lorusso ©</p>
-</footer>
 
 </html>
