--- a/portfolio.html
+++ b/portfolio.html
@@ -25,57 +25,60 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<header>
-    <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light text-dark">
-        <a class="navbar-brand" href="#">Ava Lorusso</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</header>
 
 <body>
+    <header>
+        <!-- Bootstrap Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light text-dark">
+            <a class="navbar-brand" href="#">Ava Lorusso</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
     <h1 id="padding" style="text-align: center;">Portfolio</h1>
-    <div class="containerImages">
+    <div class="container">
         <div class="row">
-            <div id="imgL" class="col">Santi
-                <img src="Santi.JPG" class="responsive" width="420" height="600">
+            <div class="col-md-6 px-4 py-4">
+                <a href="https://avatl.github.io/code-quiz-hw4/">
+                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/codequiz.png" class="img-fluid">
             </div>
 
-            <div class="col">Evan
-                <img src="Evan.JPG" class="responsive" width="420" height="600">
+            <div class="col-md-6 px-4 py-4">
+                <a href="https://m-source21.github.io/project1-calendar/">
+                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/proj1cal.png" class="img-fluid">
             </div>
 
-            <div class="w-100"></div>
-
-            <div id="imgL" class="col">Brando
-                <img src="Brando.JPG" class="responsive" width="420" height="275">
+            <div class="col-md-6 px-4 py-4">
+                <a href="https://avatl.github.io/schedule-hw5/">
+                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/scheduler.png" class="img-fluid">
             </div>
 
-            <div class="col">Holden
-                <img src="Holden.JPG" class="responsive" width="420" height="275">
+            <div class="col-md-6 px-4 py-4">
+                <a href="https://avatl.github.io/weather-hw6/">
+                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/weather.png" class="img-fluid">
             </div>
         </div>
     </div>
+    <footer>
+        <p>Ava Lorusso ©</p>
+    </footer>
 </body>
 
-<footer>
-    <p style="text-align: center">Ava Lorusso ©</p>
-</footer>
 
 </html>
