--- a/contact.html
+++ b/contact.html
@@ -2,27 +2,29 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <!-- Bootstrap mobile responsive -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Document</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- Bootstrap depend. jQuery JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <!-- Bootstrap Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <!-- Bootstrap JS minified -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-  <!-- my CSS -->
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <!-- Icons for profile card -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap mobile responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Document</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Bootstrap depend. jQuery JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <!-- Bootstrap Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <!-- Bootstrap JS minified -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+    <!-- my CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -39,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">About Me</a>
+            <a class="nav-link" href="index.html">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -56,7 +58,7 @@
   <section class="mb-4 container">
 
     <!--Contact-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact</h2>
+    <h1 class="h1-responsive font-weight-light text-center my-4">Contact</h1>
 
     <!--Message from me-->
     <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact me
@@ -104,24 +106,24 @@
 
         <!--Send-->
         <div class="text-center text-md-left">
-          <a class="btn btn-secondary">Send</a>
+          <a class="btn btn-secondary text-light">Send</a>
         </div>
         <div class="status"></div>
       </div>
 
       <!--Grid column-->
       <div class="col-md-3 text-center">
-        <ul class="list-unstyled mb-0">
-          <li>
-            <a href="https://www.instagram.com/atltakesflics/" target="_blank">Instagram</a>
-          </li>
-
+        <ul class="list-unstyled">
           <li>
             <a href="https://github.com/avatl" target="_blank">GitHub</a>
           </li>
+          
+          <li>
+            <a href="https://www.linkedin.com/in/ava-lorusso-08a0791b8/" target="_blank">LinkedIn</a>
+          </li>
 
           <li>
-            <a href="https://soundcloud.com/avateresa" target="_blank">SoundCloud</a>
+            <a href="https://angel.co/u/avalorusso" target="_blank">AngelList</a>
           </li>
         </ul>
       </div>
