--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">About Me</a>
+                        <a class="nav-link" href="index.html">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -66,21 +66,21 @@
                     <a href="https://github.com/avatl"><i class="fa fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/ava-lorusso-08a0791b8/"><i class="fa fa-linkedin"></i></a>
                     <a href="https://angel.co/u/avalorusso"><i class="fa fa-angellist"></i></a>
-                    <a href="https://open.spotify.com/user/ava.tlorusso"><i class="fa fa-spotify"></i></a>
                 </div>
 
                 <p>
                     <button class="card-button">
-                        <a href="Assets/Images/codeRes.png" download="AvaLorussoResume" class="text-light">
+                        <a href="Assets/Images/codeResume.pdf" download="ALorussoResume" class="text-light">
                             Resume
                         </a>
                     </button>
                 </p>
+
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 my-auto">
                 <div class="rounded">
-                    <h1>Profile</h1>
-                    <p>
+                    <h1 class="font-weight-light">About</h1>
+                    <p style="font-size: large;">
                         Ava is a full-time student at Columbia University in addition to a CUNY University.
                         She is currently embarking on a career in full-stack development while also studying
                         to complete an Associate’s Degree in psychology. Ava plans to use and build upon her
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-        
+
         <footer>
             <p>Ava Lorusso ©</p>
         </footer>
