--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About Me</a>
+                        <a class="nav-link" href="index.html">Profile</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -51,27 +51,27 @@
         </nav>
     </header>
 
-    <h1 id="padding" style="text-align: center;">Portfolio</h1>
+    <h1 id="padding" style="text-align: center;" class="font-weight-light">Portfolio</h1>
     <div class="container">
         <div class="row">
             <div class="col-md-6 px-4 py-4">
                 <a href="https://avatl.github.io/code-quiz-hw4/">
-                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/codequiz.png" class="img-fluid">
+                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/codequiz.jpeg" class="img-fluid">
             </div>
 
             <div class="col-md-6 px-4 py-4">
                 <a href="https://m-source21.github.io/project1-calendar/">
-                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/proj1cal.png" class="img-fluid">
+                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/proj1cal.jpeg" class="img-fluid">
             </div>
 
             <div class="col-md-6 px-4 py-4">
                 <a href="https://avatl.github.io/schedule-hw5/">
-                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/scheduler.png" class="img-fluid">
+                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/scheduler.jpeg" class="img-fluid">
             </div>
 
             <div class="col-md-6 px-4 py-4">
                 <a href="https://avatl.github.io/weather-hw6/">
-                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/weather.png" class="img-fluid">
+                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/weather.jpeg" class="img-fluid">
             </div>
         </div>
     </div>
