added repo links and project titles to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,26 +52,36 @@
     </header>
 
     <h1 id="padding" style="text-align: center;" class="font-weight-light">Portfolio</h1>
-    <div class="container">
+    <div class="container border">
         <div class="row">
+            
             <div class="col-md-6 px-4 py-4">
+                <p>Code Quiz</p>
                 <a href="https://avatl.github.io/code-quiz-hw4/">
-                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/codequiz.jpeg" class="img-fluid">
-            </div>
+                    <img src="Assets/Images/codequiz.jpeg" class="img-fluid">
+                    <a  class="repoLinks" href="https://github.com/avatl/code-quiz-hw4">View The Repository</a>
+                </div>
 
             <div class="col-md-6 px-4 py-4">
+                <p>Everyday Calendar</p>
                 <a href="https://m-source21.github.io/project1-calendar/">
-                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/proj1cal.jpeg" class="img-fluid">
+                    <img src="Assets/Images/proj1cal.jpeg" class="img-fluid">
+                    <a  class="repoLinks" href="https://github.com/M-Source21/project1-calendar">View The Repository</a>
             </div>
 
             <div class="col-md-6 px-4 py-4">
+                <p>Day Scheduler</p>
                 <a href="https://avatl.github.io/schedule-hw5/">
-                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/scheduler.jpeg" class="img-fluid">
+                    <img src="Assets/Images/scheduler.jpeg" class="img-fluid">
+                    <a  class="repoLinks" href="https://github.com/avatl/schedule-hw5">View The Repository</a>
+
             </div>
 
             <div class="col-md-6 px-4 py-4">
+                <p>Weather Dashboard</p>
                 <a href="https://avatl.github.io/weather-hw6/">
-                    <img alt="Ava's Code Quiz Repo" src="Assets/Images/weather.jpeg" class="img-fluid">
+                    <img src="Assets/Images/weather.jpeg" class="img-fluid">
+                    <a  class="repoLinks" href="https://github.com/avatl/weather-hw6">View The Repository</a>
             </div>
         </div>
     </div>
