--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,9 @@
     <h1 class="h1-responsive font-weight-light text-center my-4">Contact</h1>
 
     <!--Message from me-->
-    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact me
-      directly at ava.tlorusso@gmail.com</p>
+    <p class="text-center w-responsive mx-auto mb-5">
+      Send your message to Ava below:
+    </p>
 
     <div class="row justify-content-md-center">
 
