--- a/portfolio.html
+++ b/portfolio.html
@@ -52,25 +52,25 @@
     </header>
 
     <h1 id="padding" style="text-align: center;" class="font-weight-light">Portfolio</h1>
-    <div class="container border">
+    <div class="container ">
         <div class="row">
             
             <div class="col-md-6 px-4 py-4">
-                <p>Code Quiz</p>
+                <p class="text-center">Code Quiz</p>
                 <a href="https://avatl.github.io/code-quiz-hw4/">
                     <img src="Assets/Images/codequiz.jpeg" class="img-fluid">
                     <a  class="repoLinks" href="https://github.com/avatl/code-quiz-hw4">View The Repository</a>
                 </div>
 
             <div class="col-md-6 px-4 py-4">
-                <p>Everyday Calendar</p>
+                <p class="text-center">Everyday Calendar</p>
                 <a href="https://m-source21.github.io/project1-calendar/">
                     <img src="Assets/Images/proj1cal.jpeg" class="img-fluid">
                     <a  class="repoLinks" href="https://github.com/M-Source21/project1-calendar">View The Repository</a>
             </div>
 
             <div class="col-md-6 px-4 py-4">
-                <p>Day Scheduler</p>
+                <p class="text-center">Day Scheduler</p>
                 <a href="https://avatl.github.io/schedule-hw5/">
                     <img src="Assets/Images/scheduler.jpeg" class="img-fluid">
                     <a  class="repoLinks" href="https://github.com/avatl/schedule-hw5">View The Repository</a>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="col-md-6 px-4 py-4">
-                <p>Weather Dashboard</p>
+                <p class="text-center">Weather Dashboard</p>
                 <a href="https://avatl.github.io/weather-hw6/">
                     <img src="Assets/Images/weather.jpeg" class="img-fluid">
                     <a  class="repoLinks" href="https://github.com/avatl/weather-hw6">View The Repository</a>
