links open in new page

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,31 +57,31 @@
             
             <div class="col-md-6 px-4 py-4">
                 <p class="text-center">Code Quiz</p>
-                <a href="https://avatl.github.io/code-quiz-hw4/">
+                <a href="https://avatl.github.io/code-quiz-hw4/" target="_blank">
                     <img src="Assets/Images/codequiz.jpeg" class="img-fluid">
-                    <a  class="repoLinks" href="https://github.com/avatl/code-quiz-hw4">View The Repository</a>
+                    <a  class="repoLinks" href="https://github.com/avatl/code-quiz-hw4" target="_blank">View The Repository</a>
                 </div>
 
             <div class="col-md-6 px-4 py-4">
                 <p class="text-center">Everyday Calendar</p>
-                <a href="https://m-source21.github.io/project1-calendar/">
+                <a href="https://m-source21.github.io/project1-calendar/" target="_blank">
                     <img src="Assets/Images/proj1cal.jpeg" class="img-fluid">
-                    <a  class="repoLinks" href="https://github.com/M-Source21/project1-calendar">View The Repository</a>
+                    <a  class="repoLinks" href="https://github.com/M-Source21/project1-calendar" target="_blank">View The Repository</a>
             </div>
 
             <div class="col-md-6 px-4 py-4">
                 <p class="text-center">Day Scheduler</p>
-                <a href="https://avatl.github.io/schedule-hw5/">
+                <a href="https://avatl.github.io/schedule-hw5/" target="_blank">
                     <img src="Assets/Images/scheduler.jpeg" class="img-fluid">
-                    <a  class="repoLinks" href="https://github.com/avatl/schedule-hw5">View The Repository</a>
+                    <a  class="repoLinks" href="https://github.com/avatl/schedule-hw5" target="_blank">View The Repository</a>
 
             </div>
 
             <div class="col-md-6 px-4 py-4">
                 <p class="text-center">Weather Dashboard</p>
-                <a href="https://avatl.github.io/weather-hw6/">
+                <a href="https://avatl.github.io/weather-hw6/" target="_blank">
                     <img src="Assets/Images/weather.jpeg" class="img-fluid">
-                    <a  class="repoLinks" href="https://github.com/avatl/weather-hw6">View The Repository</a>
+                    <a  class="repoLinks" href="https://github.com/avatl/weather-hw6" target="_blank">View The Repository</a>
             </div>
         </div>
     </div>
