--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 <p class="title">Full-Stack Developer; Student</p>
                 <p>Columbia University</p>
                 <div class="mx-2">
-                    <a href="https://github.com/avatl"><i class="fa fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/ava-lorusso-08a0791b8/"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://angel.co/u/avalorusso"><i class="fa fa-angellist"></i></a>
+                    <a href="https://github.com/avatl" target="_blank"><i class="fa fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/ava-lorusso-08a0791b8/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://angel.co/u/avalorusso" target="_blank"><i class="fa fa-angellist"></i></a>
                 </div>
 
                 <p>
